sock-shop-yaml/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sockshop
  namespace: sock-shop
spec:
  hosts:
  - "*"
  gateways:
  - sockshop-gateway
  http:
  - match:
     - uri:
         prefix: /
    route:
    - destination:
        host: front-end
        port:
          number: 80
